# Rprog

./: cachematrix.R
tpm/_src/cryptolib/Sample_Registration_Encryption/: .cproject  .project  Doxyfile.in  Makefile  Makefile.am  Makefile.in  README.md  README.raspbian.md  bootstrap  config.h  config.h.in  config.status  configure  configure.ac  layout.xml  libtool
tpm/_src/cryptolib/Sample_Registration_Encryption/Debug/: makefile  sources.mk
tpm/_src/cryptolib/Sample_Registration_Encryption/Debug/src/: subdir.mk
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/: GMMP.lo  Makefile  Makefile.am  Makefile.in  libgmmp.la
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/.deps/: GMMP.Plo
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/.libs/: libgmmp.0.dylib  libgmmp.dylib  libgmmp.la  libgmmp.lai
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/Define/: Define_Control.h  Define_Delivery.h
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/ErrorCode/: StringTable.lo
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/Log/: GMMP_Log.c  GMMP_Log.h  GMMP_Log.lo
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/Network/: Network.lo
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/Operation/: GMMP_Operation.c  GMMP_Operation.h  GMMP_Operation.lo
tpm/_src/cryptolib/Sample_Registration_Encryption/GMMP_lib/Util/: GMMP_Util.c  GMMP_Util.h  GMMP_Util.lo
tpm/_src/cryptolib/Sample_Registration_Encryption/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
tpm/_src/cryptolib/Sample_Registration_Encryption/samples/: Makefile.am  Makefile.in  decrypt_update.c  encrypt_update.c  gen_asym_key.c  gen_csr.c  gen_signature.c  scroll_cipher.c  sym_decrypt.c  sym_encrypt.c  tests.sh  verify_signature.c
tpm/_src/cryptolib/Sample_Registration_Encryption/src/: .TPMFunctions.c.swp  Base64.c  CryptoSuite.h  Encryption.c  Makefile  Makefile.am  Makefile.in  Sample_Registration_Encryption  Sample_Registration_Encryption.c  SecretKey.c  Setting.c  Setting.h  SignVerify.c  TPMCryptoSuite.h  TPMFunctions.c  gmmp.conf.example
tpm/_src/cryptolib/Sample_Registration_Encryption/src/.deps/: Sample_Registration_Encryption.Po  Setting.Po
tpm/_src/cryptolib/Sample_Registration_Encryption/src/.libs/: Sample_Registration_Encryption
tpm/_src/cryptolib/Sample_Registration_Encryption/tests/: Makefile  Makefile.am  Makefile.in  check_base64.c  check_enc_setting.c  check_encryption.c  check_secretkey.c  check_setting1.c  check_sign.c  check_sign_tpm.c
tpm/_src/cryptolib/Sample_Registration_Encryption/tests/.deps/: check_setting1-check_setting1.Po
tpm/_src/remote_attestation/GMMP_RA_client/: Makefile.am  configure.ac
tpm/_src/remote_attestation/GMMP_RA_client/Debug/: Log  makefile  mmm  objects.mk  sources.mk
tpm/_src/remote_attestation/GMMP_RA_client/Debug/GMMP_lib/: subdir.mk
tpm/_src/remote_attestation/GMMP_RA_client/Debug/ralib/: subdir.mk
tpm/_src/remote_attestation/GMMP_RA_client/Debug/src/: subdir.mk
tpm/_src/remote_attestation/GMMP_RA_client/GMMP_lib/: GMMP.c  GMMP.h  Makefile.am
tpm/_src/remote_attestation/GMMP_RA_client/GMMP_lib/Define/: Define.h  Define_Operation.h
tpm/_src/remote_attestation/GMMP_RA_client/GMMP_lib/ErrorCode/: ErrorCode.h  Makefile.am  OMPErrorCode.h  StringTable.c  StringTable.h
tpm/_src/remote_attestation/GMMP_RA_client/GMMP_lib/Log/: Makefile.am
tpm/_src/remote_attestation/GMMP_RA_client/GMMP_lib/Network/: Makefile.am  Network.c  Network.h
tpm/_src/remote_attestation/GMMP_RA_client/GMMP_lib/Operation/: GMMP_Operation.c  Makefile.am  Struct_Common.h
tpm/_src/remote_attestation/GMMP_RA_client/GMMP_lib/Util/: Makefile.am
tpm/_src/remote_attestation/GMMP_RA_client/Release/: makefile
tpm/_src/remote_attestation/GMMP_RA_client/Release/src/: Sample_Control.d  subdir.mk
tpm/_src/remote_attestation/GMMP_RA_client/misc/: README.raspbian.md
tpm/_src/remote_attestation/GMMP_RA_client/ralib/: Makefile.am  dbg_log.c  identity.c  ralib.c  remote_attestation.c  tpm_pcrextend.c  tpm_util.c
tpm/_src/remote_attestation/GMMP_RA_client/ralib/include/: dbg_macros.h  identity.h  ra_com_mini.h  ralib.h  tpm_util.h
tpm/_src/remote_attestation/GMMP_RA_client/src/: Makefile.am  Sample_All.c  Sample_All.c.org  dummy_gw.c  gw_0001.conf  show_gw.c
tpm/_src/remote_attestation/OMP_RA_server/: Makefile.am  bootstrap  configure.ac
tpm/_src/remote_attestation/OMP_RA_server/attester_verifier/: Makefile.am  dbg_log.c  mariadb_util.c  parse_util.c  ra_com.c  socket_util.c  timer.c  tp_mariadb_util.c  tp_server.c  verify_data.c
tpm/_src/remote_attestation/OMP_RA_server/attester_verifier/conf/: 60-attester.conf  sp_django.ini  tp_server.conf  tpserver.conf
tpm/_src/remote_attestation/OMP_RA_server/attester_verifier/include/: dbg_macros.h  maria_db.h  parse_util.h  ra_com.h  ra_server.h  remote_attestation.h  socket_util.h  timer.h  tp_maria_db.h  tp_server.h  tpm_util.h  verify_data.h
tpm/_src/remote_attestation/OMP_RA_server/attester_verifier/key/: x509.pem
tpm/_src/remote_attestation/OMP_RA_server/attester_verifier/tests/: Makefile.am  check_mariadb_util.c  check_parse_util.c  check_ra_com.c  check_verify_data.c
tpm/_src/remote_attestation/OMP_RA_server/privacy_ca/: 00README  Makefile.am  debug_log.c  debug_log.h  debug_tpm.c  debug_tpm.h  dosign.c  pca.conf.sample  pca_utils.c  pca_utils.h
tpm/_src/remote_attestation/OMP_RA_server/privacy_ca/cert/: pca.crt  pca.csr
tpm/_src/remote_attestation/OMP_RA_server/privacy_ca/key/: pca.der  pca.key  pca.key.enc
tpm/_src/remote_attestation/OMP_RA_server/privacy_ca/output.ref/: aik_cert.der  aik_sign.crt  asym.sent  cred.out  post_it  request.clean  sym.sent
tpm/_src/remote_attestation/OMP_RA_server/tools/: Makefile.am
tpm/_src/remote_attestation/OMP_RA_server/tools/gen_pcr_answer/: Makefile.am
tpm/_src/remote_attestation/OMP_RA_server/tp_ralib/: Makefile.am  dbg_macros.h  parse_conf.c  test_util.c  test_util.h  tp_ra.conf  tp_ra_type.h  tp_ralib.c  tp_ralib.h  tp_ralib_conf.h
(+161 files in other folders)
