AUTOMAKE_OPTIONS = subdir-objects
lib_LTLIBRARIES=libgmmp.la
libgmmp_la_SOURCES = GMMP.c GMMP.h
libgmmp_la_SOURCES += Define/Define_Control.h
libgmmp_la_SOURCES += Define/Define_Operation.h
libgmmp_la_SOURCES += Define/Define_Delivery.h
libgmmp_la_SOURCES += Define/Define.h
libgmmp_la_SOURCES += ErrorCode/OMPErrorCode.h
libgmmp_la_SOURCES += ErrorCode/StringTable.c
libgmmp_la_SOURCES += ErrorCode/StringTable.h
libgmmp_la_SOURCES += ErrorCode/ErrorCode.h
libgmmp_la_SOURCES += Log/GMMP_Log.c
libgmmp_la_SOURCES += Log/GMMP_Log.h
libgmmp_la_SOURCES += Network/Network.c
libgmmp_la_SOURCES += Network/Network.h
libgmmp_la_SOURCES += Util/GMMP_Util.c
libgmmp_la_SOURCES += Util/GMMP_Util.h
libgmmp_la_SOURCES += Operation/GMMP_Operation.c
libgmmp_la_SOURCES += Operation/GMMP_Operation.h
libgmmp_la_SOURCES += Operation/ProfileInfo/GMMP_ProfileInfo.h
libgmmp_la_SOURCES += Operation/ProfileInfo/GMMP_ProfileInfo.c
libgmmp_la_SOURCES += Operation/ProfileInfo/Struct_ProfileInfo.h
libgmmp_la_SOURCES += Operation/LongSentence/GMMP_LSentence.c
libgmmp_la_SOURCES += Operation/LongSentence/GMMP_LSentence.h
libgmmp_la_SOURCES += Operation/LongSentence/Struct_LSentence.h
libgmmp_la_SOURCES += Operation/Remote/GMMP_Remote.h
libgmmp_la_SOURCES += Operation/Remote/GMMP_Remote.c
libgmmp_la_SOURCES += Operation/Remote/Struct_Remote.h
libgmmp_la_SOURCES += Operation/Encrypt/GMMP_Encrypt.c
libgmmp_la_SOURCES += Operation/Encrypt/Struct_Encrypt.h
libgmmp_la_SOURCES += Operation/Encrypt/GMMP_Encrypt.h
libgmmp_la_SOURCES += Operation/Notification/GMMP_Notification.h
libgmmp_la_SOURCES += Operation/Notification/GMMP_Notification.c
libgmmp_la_SOURCES += Operation/Notification/Struct_Notification.h
libgmmp_la_SOURCES += Operation/Control/Struct_Control.h
libgmmp_la_SOURCES += Operation/Control/GMMP_Control.c
libgmmp_la_SOURCES += Operation/Control/GMMP_Control.h
libgmmp_la_SOURCES += Operation/Control/Struct_Control_Opt.h
libgmmp_la_SOURCES += Operation/Delivery/GMMP_Delivery.c
libgmmp_la_SOURCES += Operation/Delivery/GMMP_Delivery.h
libgmmp_la_SOURCES += Operation/Delivery/Struct_Delivery.h
libgmmp_la_SOURCES += Operation/Heartbeat/GMMP_Heartbeat.c
libgmmp_la_SOURCES += Operation/Heartbeat/GMMP_Heartbeat.h
libgmmp_la_SOURCES += Operation/Heartbeat/Struct_Heartbeat.h
libgmmp_la_SOURCES += Operation/Struct_Common.h
libgmmp_la_SOURCES += Operation/Reg/Struct_DeReg_Device.h
libgmmp_la_SOURCES += Operation/Reg/GMMP_Reg.c
libgmmp_la_SOURCES += Operation/Reg/Struct_Reg_Device.h
libgmmp_la_SOURCES += Operation/Reg/GMMP_Reg.h
libgmmp_la_SOURCES += Operation/Reg/Struct_Reg_GW.h
libgmmp_la_SOURCES += Operation/Reg/Struct_DeReg_GW.h
libgmmp_la_SOURCES += Operation/LOB/Struct_LOB.h
libgmmp_la_SOURCES += Operation/LOB/GMMP_LOB.h
libgmmp_la_SOURCES += Operation/LOB/GMMP_LOB.c
libgmmp_la_SOURCES += Operation/FTP/GMMP_FTP.c
libgmmp_la_SOURCES += Operation/FTP/Struct_FTP.h
libgmmp_la_SOURCES += Operation/FTP/GMMP_FTP.h
libgmmp_la_SOURCES += Operation/Multimedia/GMMP_Multimedia.c
libgmmp_la_SOURCES += Operation/Multimedia/GMMP_Multimedia.h
libgmmp_la_SOURCES += Operation/Multimedia/Struct_Multimedia.h
